# brainvault

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
brainvault/: __init__.py  agent_picker.py  bootstrap.py  capture.py  cli.py  code_scan.py  db.py  embeddings.py  git_scan.py  graph.py  installer.py  mcp_server.py  mcp_terse.py  tool_capture.py
brainvault/adapters/: __init__.py  _redact.py  base.py  claude_code.py  cursor.py
tests/: conftest.py  test_adapters.py  test_agent_picker.py  test_bootstrap.py  test_capture.py  test_cli_extras.py  test_code_scan.py  test_db.py  test_git_scan.py  test_graph.py  test_mcp.py  test_new_features.py  test_tool_capture.py  test_vector.py  test_windows_hook_smoke.py
