[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainvault"
version = "0.2.5"
description = "Personal memory layer for Claude Code and Cursor — knows who you are, what you've built, how you think"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sumith SB", email = "sumith2620@gmail.com" }]
keywords = ["claude", "cursor", "mcp", "memory", "ai", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SumithSB/brainvault"
Repository = "https://github.com/SumithSB/brainvault"
Documentation = "https://github.com/SumithSB/brainvault#readme"
"Bug Tracker" = "https://github.com/SumithSB/brainvault/issues"
Changelog = "https://github.com/SumithSB/brainvault/blob/main/CHANGELOG.md"

[project.optional-dependencies]
semantic = [
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "sqlite-vec>=0.1.0",
    "twine>=5.0.0",
]

[project.scripts]
brainvault = "brainvault.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["brainvault"]

# sdist: do not ship local agent config or the uv lockfile (wheel is `brainvault/` only).
[tool.hatch.build.targets.sdist]
exclude = ["/.claude", "/uv.lock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
